--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
     padding: 0;
 }
 .NAVBAR > button{
-    color: black;
-    background-color: rgba(2, 66, 21, 0.473);
+    color: white;
+    background-color: black;
     border-width: 0;
     height: 40px;
     width: 125px;
 }
 .NAVBAR > button:hover{
-    color: white;
-    background-color: darkgreen;
+    color: black;
+    background-color: grey;
 }
